--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,12 @@
     <string name="start_text">Вы установили приложение `Dishes`, которое представляет собой книгу рецептов.</string>
     <string name="start_text2">Здесь вы найдете все подходящие для себя рецепты и сможете их сохранить.\n\nАвтор приложения: Артём Брешенков</string>
     <string name="start_btn">Начать</string>
+    <string name="mainscreenlogo">Пора Готовить</string>
+    <string name="searchtext">Поиск...</string>
+    <string name="saladtext">Салаты</string>
+    <string name="snackstext">Закуски</string>
+    <string name="hottext">Горячее</string>
+    <string name="souptext">Супы</string>
+
 
 </resources>
